--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
-version: '3.7'
+version: '3.8'
 
 services:
   split-horizon-helper:
-    image: docker.pkg.github.com/williamjacksn/split-horizon-helper/split-horizon-helper
+    image: ghcr.io/williamjacksn/split-horizon-helper
